
class Configurator:
    def __init__(self, connection_params: dict):
        self.connection_parameters = connection_params
