import sparql
# TODO which sparql to import?


class SPARQLClient:
    def __init__(self, connection_params: dict):
        # TODO
        pass